# privy

./: .gitignore  Cargo.toml
src/: README.md  lib.rs  main.rs  messages.rs  roles.rs  token.rs
src/client/: connection.rs
src/server/: listener.rs  manager.rs  mod.rs
